--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="stylesheet" href="./assets/font-icon/css/all.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;400;500&family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <title>Tea House</title>
+    <title>TH House</title>
 </head>
 <body onload="displayHotTea()">
     <div id="main">
