--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <div class="col l-6">
                             <i class="fa-solid fa-phone-volume"></i>
                             <span>Hotline:</span>
-                            <a href="" class="header__notify-phone">0329479***</a>
+                            <a href="#" class="header__notify-phone">0329479***</a>
                         </div>
 
                         <div class="col l-6">
