--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
         <div class="modal__notify-background"></div>
         <div class="modal__notify-body">
             <div class="modal__notify-header">Chào bạn!!!</div>
-            <div class="modal__notify-desc">Mình mới phát triển trang TH trên nền tảng trên PC, chưa có phát triển trên Mobile và Tablet (mình sẽ phát triển trên nền tảng khác trong thời gian tới). Trong thời gian này, bạn hãy truy cập trang TH bằng PC</div>
+            <div class="modal__notify-desc">Mình mới phát triển trang TH trên nền tảng PC, chưa có phát triển trên Mobile và Tablet (mình sẽ phát triển trên nền tảng khác trong thời gian tới). Trong thời gian này, bạn hãy truy cập trang TH bằng PC</div>
             <div class="modal__notify-end">XIN CẢM ƠN!</div>
         </div>
     </div>
